--- a/app/src/main/res/drawable/buttons.xml
+++ b/app/src/main/res/drawable/buttons.xml
@@ -2,19 +2,27 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/button_clr"/>
+            <gradient android:angle="135"
+                android:startColor="@color/button_clr_st"
+                android:centerColor="@color/button_clr"
+                android:endColor="@color/button_clr_st"
+                />
             <corners android:topRightRadius="15dp"
                 android:bottomLeftRadius="15dp"/>
-            <stroke android:color="@color/button_strk"
+            <stroke android:color="@color/button_str"
                 android:width="1.5dp"/>
         </shape>
     </item>
-    <item android:state_selected="true">
+    <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/button_clr_chk"/>
+            <gradient android:angle="135"
+                android:startColor="@color/button_clr_st"
+                android:centerColor="@color/button_clr"
+                android:endColor="@color/button_clr_st"
+                />
             <corners android:topRightRadius="15dp"
                 android:bottomLeftRadius="15dp"/>
-            <stroke android:color="@color/button_strk_chk"
+            <stroke android:color="@color/button_str_chk"
                 android:width="1.5dp"/>
         </shape>
     </item>
