--- a/app/src/main/res/drawable/textbackground.xml
+++ b/app/src/main/res/drawable/textbackground.xml
@@ -2,9 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/transparent_bg"/>
-            <corners android:topRightRadius="15dp"
-                android:bottomLeftRadius="15dp"/>
+            <solid android:color="@color/textbg"/>
+            <corners android:radius="10dp"/>
             <stroke android:color="@color/tr_bg_str"
                 android:width="1.5dp"/>
 
