--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,6 +30,8 @@
     <color name="bgcolorcn">#116F95</color>
     <color name="bgcolornd">#001040</color>
 
+    <color name="listvbg">#CC031027</color>
+
 
 
 </resources>
