--- a/app/src/main/res/layout/activity_control.xml
+++ b/app/src/main/res/layout/activity_control.xml
@@ -13,13 +13,43 @@
         android:layout_marginBottom="50dp">
 
         <TextView
-            android:id="@+id/controlText"
+            android:id="@+id/ForLtGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
             android:layout_centerInParent="true"
             android:textColor="@color/white"
             android:text="Control"
+            />
+        <TextView
+            android:layout_toStartOf="@id/ForLtGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_centerInParent="true"
+            android:textColor="@color/white"
+            android:text="For Light Group "
+            />
+
+        <TextView
+            android:id="@+id/ForFanGroup"
+            android:layout_below="@id/ForLtGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_centerInParent="true"
+            android:textColor="@color/white"
+            android:text="Control"
+            />
+        <TextView
+            android:layout_toStartOf="@id/ForFanGroup"
+            android:layout_below="@id/ForLtGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_centerInParent="true"
+            android:textColor="@color/white"
+            android:text="For Fan Group "
             />
     </RelativeLayout>
 
